# strands-agents-tutorial

./: pyproject.toml
.devcontainer/: devcontainer.json
my_agent/: agent.py
src/: agent.py  direct_tool_calling.py  handoff_to_user.py  workflow_tool.py
